reservation in progress

--- a/index.html
+++ b/index.html
@@ -1,57 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <title>Hot Restaurant</title>
-  <!-- Latest compiled and minified CSS & JS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <title>Hot Restaurant</title>
+    <!-- Latest compiled and minified CSS & JS -->
+    <link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
-
 <body>
 
-  <div class="container">
-    <div class="jumbotron">
-      <h1>Hot Restaurant</h1>
-      <h3>We only have 5 tables! Book your seat before they all are go</h3>
-      <hr>
-      <a href="/add"><button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> View Tables</button></a>
-      <a href="/api/characters"><button class="btn btn-danger btn-lg"><span class="fa fa-eye"></span> Make
-          Reservation</button></a>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="jumbotron">
-      <form>
-        <div class="form-group">
-          <label for="exampleFormControlTextarea1">Enter your name here:</label>
-          <textarea class="form-control" id="resName" rows="3"></textarea>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlTextarea2">What time would you like to reserve?</label>
-          <textarea class="form-control" id="resTime" rows="3"></textarea>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlTextarea3">How many people in your party?</label>
-          <textarea class="form-control" id="partySize" rows="3"></textarea>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlTextarea4">id</label>
-          <textarea class="form-control" id="resID" rows="3"></textarea>
-        </div>
-
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
-  </div>
-
+        <div class="container">
+                <div class="jumbotron">
+                  <h1>Hot Restaurant</h1>
+                  <h3>We only have 5 tables! Book your seat before they all are go</h3>
+                  <hr>
+                  <a href="/add"><button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> View Tables</button></a>
+                  <a href="/api/characters"><button class="btn btn-danger btn-lg"><span
+                        class="fa fa-eye"></span> Make Reservation</button></a>
+                </div>
+    
 </body>
-
 </html>
