--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                   <h1>Hot Restaurant</h1>
                   <h3>We only have 5 tables! Book your seat before they all are go</h3>
                   <hr>
-                  <a href="/add"><button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> View Tables</button></a>
-                  <a href="/api/characters"><button class="btn btn-danger btn-lg"><span
+                  <a href="/view"><button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> View Tables</button></a>
+                  <a href="/reservation"><button class="btn btn-danger btn-lg"><span
                         class="fa fa-eye"></span> Make Reservation</button></a>
                 </div>
         
