--- a/view.html
+++ b/view.html
@@ -20,9 +20,10 @@
             <h1>Hot Restaurant</h1>
             <h3>We only have 5 tables! Book your seat before they all are go</h3>
             <hr>
-            <a href="reservation.html"><button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> Make Reservations</button></a>
+            <a href="reservation.html"><button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> Make
+                    Reservations</button></a>
             <a href="index.html"><button class="btn btn-danger btn-lg"><span class="home"></span>
-                   Home</button></a>
+                    Home</button></a>
         </div>
 
         <div class="card">
@@ -30,16 +31,20 @@
                 <h6><strong>Current Reservations</strong></h6>
             </div>
             <div id="stats">
-                </div>
+            </div>
         </div>
-<br>
+        <br>
         <div class="card">
             <div class="card-header">
                 <h6><strong>Waiting List </strong></h6>
                 <div id="stats">
-                    </div>
+                </div>
             </div>
         </div>
+
+        <script type="text/javascript">
+
+        </script>
 
 </body>
 
