--- a/reservation.html
+++ b/reservation.html
@@ -11,7 +11,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
 </head>
 
 <body>
@@ -37,23 +36,22 @@
                         <div class="form-group">
                             <label for="exampleFormControlTextarea1">Whose name is this registered under?</label>
                             <textarea class="form-control" id="reservation-name" rows="1"></textarea>
-                          </div>
+                        </div>
                         <br>
                         <div class="form-group">
                             <label for="exampleFormControlTextarea2">What is your phone number?</label>
                             <textarea class="form-control" id="reservation-phone" rows="1"></textarea>
-                          </div>
+                        </div>
                         <br>
                         <div class="form-group">
                             <label for="exampleFormControlTextarea4">What is your email address?</label>
                             <textarea class="form-control" id="reservation-email" rows="1"></textarea>
-                          </div>
-                        <br>
+                        </div>
                         <br>
                         <div class="form-group">
-                            <label for="exampleFormControlTextarea4">ID</label>
+                            <label for="exampleFormControlTextarea4">Party Size</label>
                             <textarea class="form-control" id="reservation-id" rows="1"></textarea>
-                          </div>
+                        </div>
                         <br>
                         <div class="text-right">
                             <button type="submit" class="btn btn-primary btn-md" id="register-btn">Submit</button>
@@ -73,11 +71,12 @@
                 name: $("#reservation-name").val(),
                 phone: $("#reservation-phone").val(),
                 email: $("#reservation-email").val(),
-                id: $("reservation-id").val(),
+                id: $("#reservation-id").val()
             };
-            $.get("/api/tables", function (data) {
+            console.log(newReservation);
+            $.get("/api/reservations", function (data) {
                 if (data) {
-                    if (data.length > 5) {
+                    if (data.length >=5) {
                         waitlist(newReservation);
                     }
                     else {
@@ -90,19 +89,17 @@
         function waitlist(newReservation) {
             $.post("/api/waitlist", newReservation)
                 .then(function (data) {
-                    console.log("add.html", data);
-                    alert("Adding table to waitlist...");
+                    alert("Adding table to waitlist");
                 });
         }
         function newRez(newReservation) {
-            $.post("/api/tables", newReservation)
+            $.post("/api/reservations", newReservation)
                 .then(function (data) {
-                    console.log("add.html", data);
-                    alert("Adding table to tables...");
+                    alert("Adding table to reservations");
                 });
         }
 
-      </script>
+    </script>
 
 </body>
 
