--- a/view.html
+++ b/view.html
@@ -11,7 +11,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
 </head>
 
 <body>
@@ -20,9 +19,9 @@
             <h1>Hot Restaurant</h1>
             <h3>We only have 5 tables! Book your seat before they all are go</h3>
             <hr>
-            <a href="reservation.html"><button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> Make
+            <a href="/reservation"><button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> Make
                     Reservations</button></a>
-            <a href="index.html"><button class="btn btn-danger btn-lg"><span class="home"></span>
+            <a href="/"><button class="btn btn-danger btn-lg"><span class="home"></span>
                     Home</button></a>
         </div>
 
@@ -30,20 +29,40 @@
             <div class="card-header">
                 <h6><strong>Current Reservations</strong></h6>
             </div>
-            <div id="stats">
+            <div class="card-body" id="rezstats">
+
             </div>
         </div>
         <br>
         <div class="card">
             <div class="card-header">
                 <h6><strong>Waiting List </strong></h6>
-                <div id="stats">
-                </div>
+            </div>
+            <div class="card-body" id="waitstats">
+
             </div>
         </div>
 
         <script type="text/javascript">
+            $.get("/api/reservations", function (data) {
+                if (data.length > 0) {
+                    for (var i = 0; i < data.length; i++) {
+                        let currObj = data[i];
+                        let currList = `<li class="list-group-item">${i}. ${currObj.name} | Party Size: ${currObj.id}</li>`;
+                        $("#rezstats").append(currList);
+                    }
+                }
+            });
 
+            $.get("/api/waitlist", function (data) {
+                if (data.length > 0) {
+                    for (var i = 0; i < data.length; i++) {
+                        let currObj = data[i];
+                        let currList = `<li class="list-group-item">${i}. ${currObj.name} | Party Size: ${currObj.id}</li>`;
+                        $("#waitstats").append(currList);
+                    }
+                }
+            });
         </script>
 
 </body>
